apps/base/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-peer-svc
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 6881
      targetPort: 6881
    - protocol: UDP
      port: 6881
      targetPort: 6881
