apps/base/qbittorrent/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-https-route
  namespace: qbittorrent
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal-https-gateway
      namespace: default
  hostnames:
    - qbittorrent.internal.leomercier.dev
  rules:
    - backendRefs:
        - name: qbittorrent-svc
          port: 8080
